nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80 # Port on the service
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    label: nginx-pod
  type: ClusterIP
  ports:
    - port: 80 # Expose the service on internal cluster IP
      targetPort: 80 # Port on the pod

---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    label: nginx-pod
spec:
  containers:
    - name: myapp
      image: nginx:1.27
      ports:
        - containerPort: 80 # Expose the container on port 80
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
